shortcuts_headers = [
  'gy-shortcuts-window.h'
]

shortcuts_sources = [
  'gy-shortcuts-window.c'
]

libgydict_public_headers += files(shortcuts_headers)
libgydict_public_sources += files(shortcuts_sources)

install_headers(shortcuts_headers, install_dir: join_paths(libgydict_header_dir, 'shortcuts'))
