
pkglibdir = $(libdir)/gydict
pkglib_LTLIBRARIES = libshortcuts-private.la


libshortcuts_private_la_SOURCES =          \
	gb-accel-label.c                   \
	gb-accel-label.h                   \
	gb-shortcuts-column.c              \
	gb-shortcuts-dialog.c              \
	gb-shortcuts-dialog.h              \
	gb-shortcuts-gesture.c             \
	gb-shortcuts-gesture.h             \
	gb-shortcuts-group.c               \
	gb-shortcuts-group.h               \
	gb-shortcuts-page.c                \
	gb-shortcuts-page.h                \
	gb-shortcuts-view.c                \
	gb-shortcuts-view.h                \
	gb-shortcuts-shortcut.c            \
	gb-shortcuts-shortcut.h            \
	gb-shortcuts-window.c              \
	gb-shortcuts-window.h              \
	gb-widget.c                        \
	gb-widget.h                        \
	egg-counter.c                      \
	egg-counter.h                      \
	egg-search-bar.c                   \
	egg-search-bar.h                   \
	egg-signal-group.c                 \
	egg-signal-group.h                 \
	ide-pattern-spec.c                 \
	ide-pattern-spec.h                 \
	gb-scrolled-window.c               \
	gb-scrolled-window.h               \
	$(NULL)

libshortcuts_private_la_CFLAGS = \
	$(SHORTCUTS_CFLAGS) \
	$(NULL)

libshortcuts_private_la_LIBADD = \
	$(SHORTCUTS_LIBS) \
	$(SHM_LIB) \
	$(NULL)
